# WidgetWM

./: CMakeLists.txt
.github/workflows/: build.yaml
src/: XDirector.cpp  XDirector.hpp  main.cpp
